handle sonar - testing